2013-07-03  Ivan Vucica <ivan@vucica.net>

	* Source/x11/XGGLContext.m:
	* Source/x11/XGGLFormat.m:
	* Headers/x11/XGOpenGL.h:
	OpenGL context under X11 now picks up the best possible
	framebuffer that includes an alpha mask in the X visual info.
	The code is currently disabled as it needs more debugging.

2013-06-27  German A. Arias <german@xelalug.org>

	* Source/x11/XGServerEvent.m (-processEvent:): Don't add events
	WindowResized and WindowMoved in event_queue, to don't delay its
	sent. Instead, send these directly to the window. If not, the
	programa can move/resize the window while we send these events,
	causing a confusion.

2013-06-25  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalFontInfo.m:
	* Source/opal/OpalContext.m:
	* Source/opal/OpalGState.m:
	* Source/opal/OpalFontEnumerator.m:
	* Source/opal/OpalSurface.m:
	* Headers/opal/OpalFontInfo.h:
	* Headers/opal/OpalContext.h:
	* Headers/opal/OpalGState.h:
	* Headers/opal/OpalFontEnumerator.h:
	* Headers/opal/OpalSurface.h:
	Minimal code for dummy graphics backend now implemented for
	Opal backend.

2013-06-23  Ivan Vucica <ivan@vucica.net>

	* config.h.in:
	* configure.ac:
	* configure:
	* Source/GSBackend.m:
	Added Opal backend to appropriate places (avoiding rebuild of
	configure and config.h.in).

	* Source/opal/OpalPSSurface.m:
	* Source/opal/GNUmakefile:
	* Source/opal/OpalFontInfo.m:
	* Source/opal/OpalPDFSurface.m:
	* Source/opal/OpalContext.m:
	* Source/opal/OpalGState.m:
	* Source/opal/OpalFontEnumerator.m:
	* Source/opal/OpalSurface.m:
	* Source/opal/OpalFaceInfo.m:
	Added dummy files for the Opal backend.

2013-05-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/Win32CairoSurface.m (-initWithDevice:): Make safer
	against the surface being deallocated during this method.
	* Source/cairo/Win32CairoSurface.m
	(WIN32Server-contentsOfScreen:inRect:): Screen grabbing code.
	* Headers/win32/WIN32Server.h,
	* Source/win32/WIN32Server.m (-monitorHandleForScreen:,